# arr-assistant-mcp

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  README.md  main.py  manifest.json  pyproject.toml
.github/workflows/: ci.yml  dxt-release.yml  mcpb-release.yml  release.yml
src/arr_assistant_mcp/: __init__.py  main.py
tests/: test_main.py
