[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "arr-assistant-mcp"
version = "0.1.2"
description = "MCP server for searching and adding movies and TV shows in Radarr and Sonarr"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Justin Malloy", email = "hi@justin.vc" },
]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/omniwaifu/arr-assistant-mcp"
Repository = "https://github.com/omniwaifu/arr-assistant-mcp"
Issues = "https://github.com/omniwaifu/arr-assistant-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arr_assistant_mcp"]

[tool.uv]
required-version = ">=0.10.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
